Fix swagger error (multiple params instead of one) and change json.Unmarshal to json.NewDecode
